feat: dockerize microservices and integrate Kafka event pipeline